LIME-2034 Fix Selenium timing failures, harden CI, and tidy code smells
Acceptance tests:
- Fix race conditions by replacing bare click() calls with
  clickAndWaitForNavigation() which waits for the HTML element to go
  stale, ensuring page navigation completes before assertions run
- Replace WebDriverManager with Selenium's built-in driver management
- Refactor Driver to use ConcurrentHashMap with shutdown hook instead
  of InheritableThreadLocal, and expose closeAllDrivers()
- Remove redundant "close the driver" step from all scenarios; cleanup
  is now handled by @AfterAll and the shutdown hook
- Add @After hook with a 500ms delay between scenarios to avoid
  overloading smaller front-end containers
- Increase MAX_WAIT_SEC from 15 to 60 and use it consistently across
  all wait calls instead of scattered magic numbers
- Remove duplicate document.readyState waits that preceded title/URL
  checks in BrowserUtils
- Refactor waitForStaleElement to use FluentWait/stalenessOf
- Share a single HttpClient instance in BrowserUtils
- Add @traffic tag to UI scenarios for canary traffic test coverage
- Update "User clicks on continue" step to
  "User clicks on continue and waits for page reload"
- Match callback URL on core stub endpoint to avoid false matches on
  oauth2/callback

Traffic tests:
- Unify Dockerfile targets to share a single run-tests.sh entry point
  controlled by TRAFFIC_TEST env var
- Run traffic tests for 3 iterations to cover the 5-minute canary
  deployment window
- Read test tag from TrafficTestTag SSM parameter for traffic runs

CI/CD:
- Tighten GitHub Actions workflow permissions to least privilege
  (empty top-level permissions, id-token only where needed)
- Remove unnecessary submodules: true from checkout steps
- Upgrade cosign to v4.1.1/v3.0.5 with signing-config
- Remove redundant docker tag and reset-to-working-directory steps
- Use DOCKER_TARGET env var for build target names
- Update pre-commit hooks (pre-commit-hooks v6, cfn-lint v1.48.1,
  